# Continual-Learning-for-Dynamic-Video-Quality-Enhancement

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: model-deployment.yml
docker/: Dockerfile  docker-compose.yml
docs/: deep_dive.md
experiments/: train_abr.py  train_baseline.py  train_continual.py  train_federated.py
mlops/ab_testing/: manager.py
mlops/drift/: detector.py
mlops/monitoring/: prometheus.yml
nerve_cl/: __init__.py
nerve_cl/abr/: __init__.py  agent.py  environment.py
nerve_cl/config/: default.yaml
nerve_cl/continual/: __init__.py  distillation.py  ewc.py  maml.py  memory.py
nerve_cl/federated/: __init__.py  client.py  clustering.py  privacy.py  server.py
nerve_cl/models/: __init__.py  enhancement_engine.py  frame_recovery.py  super_resolution.py
nerve_cl/models/layers/: __init__.py  efficient_layers.py
scripts/: download_data.sh  setup_env.sh
tests/: test_abr.py  test_continual.py  test_models.py
