[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerve-cl"
version = "0.1.0"
description = "Continual Learning for Dynamic Video Quality Enhancement with MLOps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NERVE-CL Team"}
]
keywords = [
    "video-enhancement",
    "super-resolution",
    "continual-learning",
    "federated-learning",
    "mlops",
    "mobile",
    "deep-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "flwr>=1.5.0",
    "avalanche-lib>=0.4.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.1.0",
    "mlflow>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
all = ["nerve-cl[dev,docs]"]

[project.urls]
Homepage = "https://github.com/yourusername/CL-for-dynamic-video-quality-enhancement"
Documentation = "https://nerve-cl.readthedocs.io"
Repository = "https://github.com/yourusername/CL-for-dynamic-video-quality-enhancement"

[project.scripts]
nerve-train = "experiments.train_baseline:main"
nerve-federated = "experiments.train_federated:main"
nerve-abr = "experiments.train_abr:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nerve_cl*", "mlops*", "experiments*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
